# ESP32-THERMAL-COUNTER

./: .clangd  .directory  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_ES.md  REVERSION_GUIDE.md  branch_name.txt  branches.txt  branches_after_cleanup.txt  partitions.csv  sdkconfig.defaults  verify_integration.py
AGENTES/: .PLAN-A2-tracker-tracklet.md.kate-swp  .gitignore  PLAN-00-indice-y-revision-de-pares.md  PLAN-A1-bugfix-chess-noise.md  PLAN-A2-tracker-tracklet.md  PLAN-A3-fsm-puerta-infinita.md  PLAN-A4-ui-colores-zonas.md  PLAN-AGENTE-INSTRUCCIONES.md  PLAN-B1-lineas-dibujables-ui.md
Kimi_Agent_Revisión y Migración ESP32/: ESP32_THERMAL_COUNTER_Code_Review.md
components/thermal_pipeline/: CMakeLists.txt
components/thermal_pipeline/include/: alpha_beta_tracker.hpp  background_model.hpp  fov_correction.hpp  frame_accumulator.hpp  hungarian_algorithm.hpp  mask_generator.hpp  nms_suppressor.hpp  noise_filter.hpp  peak_detector.hpp  thermal_config.hpp  thermal_pipeline.hpp  thermal_types.hpp  tracklet_fsm.hpp  tracklet_tracker.hpp
components/thermal_pipeline/src/: alpha_beta_tracker.cpp  background_model.cpp  fov_correction.cpp  hungarian_algorithm.cpp  mask_generator.cpp  nms_suppressor.cpp  peak_detector.cpp  thermal_pipeline.cpp  tracklet_fsm.cpp  tracklet_tracker.cpp
docs/: ALGORITHM.md  ARCHITECTURE.md  CONFIGURATION.md  DATA_PERSISTENCE.md  HARDWARE.md  OPERATIONS.md  PERIPHERALS_DETAIL.md  README.md  STATUS_INDICATORS.md  WEBSERVER_SPECS.md  code_review.md  roadmap.md
lib/: Datasheet-MLX90640.md
main/: main.cpp  (+1 more)
(+102 files in other folders)
